--- a/game.html
+++ b/game.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/styles/game.css">
+  <link rel="stylesheet" href="./styles/game.css">
   <title>Tic Tac Toe</title>
 </head>
 
