--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="pt-br">
 
 <head>
-    <script src="/js/menu.js" defer></script>
+    <script src="./js/menu.js" defer></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jogo da Velha</title>
-    <link rel="stylesheet" href="/styles/menu.css">
+    <link rel="stylesheet" href="./styles/menu.css">
 </head>
 
 <body>
